Force-enable the DownloadService when running layout tests

We have a strict dependency, so the base::Feature entry should be
disabled. In addition, set the network start-up delay to zero, as there
is no need to throttle network activity in testing scenarios.

Bug: 866116
Change-Id: I5d2d22f20601824d09c7fd22233406dca7774268
Reviewed-on: https://chromium-review.googlesource.com/1153048
Commit-Queue: Peter Beverloo <peter@chromium.org>
Reviewed-by: Rayan Kanso <rayankans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579019}
Former-commit-id: de2620b0afccf93dbca09ee3bb095c0ca414de9c